added double to bit representation

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,6 +15,7 @@ set(Sources
     data_structs/weighted_edge_tests.cc
     bitwise/bitwise_tests.cc
     permutation/permutate_string_tests.cc
+    convertion/to_bit_string_tests.cc
 )
 
 add_executable(${This} ${Sources})
