fixed test cases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,25 +7,23 @@ project(${This} C CXX)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-# set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 
 enable_testing()
+
+include_directories(math/include)
+include_directories(data_structs/include)
 
 add_subdirectory(googletest)
 add_subdirectory(data_structs)
 add_subdirectory(math)
-
-include_directories(math/include)
-include_directories(data_structs/include)
+add_subdirectory(test)
 
 set(ExName permutate)
 set(ExSources
     permutation/permutate_string.cc
 )
-
 add_library(${ExName} STATIC ${ExSources})
 
-find_library(MathLib math "math/lib" NO_DEFAULT_PATH)
-target_link_libraries(${ExName} ${MathLib})
-
-add_subdirectory(test)
+# find_library(MathLib math "${PROJECT_SOURCE_DIR}/math/lib" NO_DEFAULT_PATH)
+# target_link_libraries(${ExName} ${MathLib})
