added graph dfs with stack

--- a/data_structs/CMakeLists.txt
+++ b/data_structs/CMakeLists.txt
@@ -9,19 +9,25 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 set(Headers
-    queue.hh
-    queue_as_stack.hh
-    stack.hh
-    stack3_as_vector1.hh
     vector.hh
+    stack.hh
+    queue.hh
+    
+    stack3_as_vector1.hh
+    queue_as_stack.hh
+    
+    graph.hh
 )
 
 set(Sources
-    queue.cc
-    queue_as_stack.cc
-    stack.cc
-    stack3_as_vector1.cc
     vector.cc
+    stack.cc
+    queue.cc
+    
+    stack3_as_vector1.cc
+    queue_as_stack.cc
+    
+    graph.cc    
 )
 
 add_library(datastructs SHARED ${Sources})
