--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.8)
 
 set(This AlgorithmsTests)
 
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_FIND_LIBRARY_PREFIXES lib)
 SET(CMAKE_FIND_LIBRARY_SUFFIXES .so .dylib)
 
@@ -24,17 +26,21 @@ set(Sources
     geometry/segments_intersection_tests.cc
 
     math/factorial_trailing_zeros_tests.cc 
+
+    search/word_counter_simple_tests.cc
 )
 
 add_executable(${This} ${Sources})
 
 find_library(MathLib math "${PROJECT_SOURCE_DIR}/math/lib" NO_DEFAULT_PATH)
 find_library(DataStructsLib datastructs "${PROJECT_SOURCE_DIR}/data_structs/lib" NO_DEFAULT_PATH)
+find_library(SearchLib search "${PROJECT_SOURCE_DIR}/search/lib" NO_DEFAULT_PATH)
 
 target_link_libraries(${This} PUBLIC
     gtest_main
     ${MathLib}
     ${DataStructsLib}
+    ${SearchLib}
 )
 
 add_test(
