added functionality to tictactoe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(googletest)
 add_subdirectory(data_structs)
 add_subdirectory(math)
 add_subdirectory(search)
+add_subdirectory(misc)
 add_subdirectory(test)
 
 set(ExName permutate)
